[package]
name = "oreq"
description = "The tool for interactively creating curl arguments from OpenAPI."
version = "0.2.0"
edition = "2021"
authors = ["uzimaru0000 <shuji365630@gmail.com>"]
license = "MIT"
homepage = "https://github.com/uzimaru0000/oreq"
repository = "https://github.com/uzimaru0000/oreq"
readme = "README.md"
keywords = ["curl", "openapi", "cli"]
categories = ["development-tools", "network-programming", "cli"]
exclude = [".github/*", "tests/*", ".vscode/*"]

[[bin]]
name = "oreq"
path = "src/main.rs"

[features]
default = []
manual = []

[dependencies]
anyhow = { version = "1.0.75", features = ["std", "backtrace"] }
clap = { version = "4.4.5", features = [
    "std",
    "color",
    "help",
    "usage",
    "error-context",
    "suggestions",
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6.2"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
http = "1.0.0"
indexmap = "2.1.0"
indoc = "2.0.4"
inquire = "0.6.2"
openapiv3 = "2.0.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.28"
thiserror = "1.0.56"
url = "2.5.0"

[dev-dependencies]
indoc = "2.0.4"
