[package]
name = "oreq"
description = "The tool for interactively creating curl arguments from OpenAPI."
version = "0.2.5"
edition = "2021"
authors = ["uzimaru0000 <shuji365630@gmail.com>"]
license = "MIT"
homepage = "https://github.com/uzimaru0000/oreq"
repository = "https://github.com/uzimaru0000/oreq"
readme = "README.md"
keywords = ["curl", "openapi", "cli"]
categories = ["development-tools", "network-programming", "cli"]
exclude = [".github/*", "tests/*", ".vscode/*"]

[[bin]]
name = "oreq"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.75", features = ["std", "backtrace"] }
clap = { version = "4.4.5", features = [
    "std",
    "color",
    "help",
    "usage",
    "error-context",
    "suggestions",
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
crossterm = { version = "0.27.0", features = ["use-dev-tty"] }
fuzzy-matcher = "0.3.7"
http = "1.0.0"
indexmap = "2.1.0"
num-traits = "0.2.19"
openapiv3 = "2.0.0"
promptuity = "0.0.5"
regex = "1.10.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.28"
thiserror = "1.0.56"
url = "2.5.0"
indoc = "2.0.4"
